# d2r-item-analyzer

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
d2r_analyzer/: config.py  main.py
d2r_analyzer/capture/: __init__.py  image_utils.py  screenshot.py
d2r_analyzer/evaluator/: __init__.py  evaluator.py  manual_evaluation.py
d2r_analyzer/llm/: __init__.py  client.py  parser.py  prompts.py
d2r_analyzer/tests/: test_llm_item_parsing.py  test_manual_evaluation.py
d2r_analyzer/tests/config_rules/: test_rules.json
d2r_analyzer/ui/: overlay.py
