[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2r-item-analyzer"
version = "0.1.0"
description = "A tool for analyzing Diablo 2 Resurrected items"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Guglielmo Carnemolla", email = "gugli90@gmail.com"}
]
keywords = ["diablo", "d2r", "item", "analyzer"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"