[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "d2r-item-analyzer"
version = "0.1.0"
description = "A tool for analyzing Diablo 2 Resurrected items"
readme = "README.md"
license = "MIT"
authors = [
    "Guglielmo Carnemolla <gugli90@gmail.com>"
]
keywords = ["diablo", "d2r", "item", "analyzer"]
packages = [{ include = "d2r_analyzer" }]

[tool.poetry.scripts]
d2r-analyzer = "d2r_analyzer.main:main"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
bettercam = "^1.0.0"
comtypes = "^1.4.16"
numpy = "^2.4.2"
opencv-python = "^4.13.0.92"
pynput = "*"
openai = "*"
pillow = "*"
pydantic-settings = "*"
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
pyinstaller = { version = "^6.16.0", python = ">=3.13,<3.15" }
ruff = "*"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"